WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164528
IndexedDB 2.0: W3C test IndexedDB/idbtransaction_objectStoreNames.html fails
https://bugs.webkit.org/show_bug.cgi?id=164528
Summary
IndexedDB 2.0: W3C test IndexedDB/idbtransaction_objectStoreNames.html fails
Brady Eidson
Reported
2016-11-08 15:29:24 PST
IndexedDB 2.0: W3C test IndexedDB/idbtransaction_objectStoreNames.html fails
Attachments
Patch v1
(3.52 KB, patch)
2016-11-08 15:38 PST
,
Brady Eidson
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-11-08 15:38:53 PST
Created
attachment 294194
[details]
Patch v1
Alex Christensen
Comment 2
2016-11-08 15:40:55 PST
Comment on
attachment 294194
[details]
Patch v1 It would be faster to use Vector.removeAllMatching and a cool lambda that captures a HashSet.
Brady Eidson
Comment 3
2016-11-09 15:38:07 PST
https://trac.webkit.org/changeset/208501
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug