IndexedDB 2.0: W3C test IndexedDB/idbtransaction_objectStoreNames.html fails. https://bugs.webkit.org/show_bug.cgi?id=164528

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/IndexedDB/idbtransaction_objectStoreNames-expected.txt:

Source/WebCore:

No new tests (Covered by existing test).

* Modules/indexeddb/IDBDatabase.cpp:
(WebCore::IDBDatabase::transaction): De-dupe the input names.

Canonical link: https://commits.webkit.org/182226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208501 268f45cc-cd09-0410-ab3c-d52691b4dbfc